@@ -569,7 +569,7 @@ exports[`Transactions list renders correctly when can filter by several currenci
                 <td
                   class="woocommerce-table__item deposit"
                 >
-                  Pending
+                  
                 </td>
               </tr>
               <tr>
@@ -694,6 +694,8 @@ exports[`Transactions list renders correctly when can filter by several currenci
                     data-link-type="wc-admin"
                     href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock"
                   >
+                    
+                     
                     Jan 7, 2020
                   </a>
                 </td>
@@ -1294,7 +1296,7 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                 <td
                   class="woocommerce-table__item deposit"
                 >
-                  Pending
+                  
                 </td>
               </tr>
               <tr>
@@ -1419,6 +1421,8 @@ exports[`Transactions list renders correctly when filtered by currency 1`] = `
                     data-link-type="wc-admin"
                     href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock"
                   >
+                    
+                     
                     Jan 7, 2020
                   </a>
                 </td>
@@ -2635,7 +2639,7 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                 <td
                   class="woocommerce-table__item deposit"
                 >
-                  Pending
+                  
                 </td>
               </tr>
               <tr>
@@ -2763,6 +2767,8 @@ exports[`Transactions list subscription column renders correctly 1`] = `
                     data-link-type="wc-admin"
                     href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock"
                   >
+                    
+                     
                     Jan 7, 2020
                   </a>
                 </td>
@@ -3378,7 +3384,7 @@ exports[`Transactions list when not filtered by deposit renders correctly 1`] = 
                 <td
                   class="woocommerce-table__item deposit"
                 >
-                  Pending
+                  
                 </td>
               </tr>
               <tr>
@@ -3503,6 +3509,8 @@ exports[`Transactions list when not filtered by deposit renders correctly 1`] = 
                     data-link-type="wc-admin"
                     href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock"
                   >
+                    
+                     
                     Jan 7, 2020
                   </a>
                 </td>
